Fixes in comments, styles and swagger
